fix text position (#270)

--- a/src/features/InsiderTipsSection/InsiderTipsSection.module.scss
+++ b/src/features/InsiderTipsSection/InsiderTipsSection.module.scss
@@ -27,8 +27,7 @@
 }
 
 .insiderTips {
-  display: flex;
-  justify-content: center;
+  text-align: center;
   white-space: pre-wrap;
   font-size: 12px;
   font-weight: $fw-regular;
