add white bg (#273)

--- a/src/features/DestinationLayout/DestinationLayout.module.scss
+++ b/src/features/DestinationLayout/DestinationLayout.module.scss
@@ -96,4 +96,9 @@
   width: calc(100% - 240px);
   padding-left: 38px;
   padding-top: 40px;
+
+  div:nth-child(2) > div > div:nth-child(1) {
+    background-color: white;
+    border-radius: 20%;
+  }
 }
