add title on dest page (#274)

--- a/src/features/DestinationIntro/DestinationIntro.module.scss
+++ b/src/features/DestinationIntro/DestinationIntro.module.scss
@@ -127,3 +127,13 @@
     margin-right: 0;
   }
 }
+
+.title {
+  margin-top: 16px;
+  margin-bottom: 6px;
+  font-weight: bold;
+
+  @include mobile-tablet {
+    margin-top: 0;
+  }
+}
