Replace Lato font to Gothic (#275)

--- a/src/components/Radio/Radio.module.scss
+++ b/src/components/Radio/Radio.module.scss
@@ -9,7 +9,7 @@
 
     &::before {
       margin: 1.7px;
-      font-family: $font-Lato;
+      font-family: $font-Century-Gothic;
       content: ' ';
       position: absolute;
       top: 45%;
@@ -45,7 +45,7 @@
 }
 .label {
   margin-left: 8px;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 14px;
   font-weight: $fw-medium;
   color: $color-black;
