--- a/src/components/RangeMarks/RangeMarks.module.scss
+++ b/src/components/RangeMarks/RangeMarks.module.scss
@@ -14,7 +14,7 @@
   gap: 10px;
 }
 
-@media screen and (max-width:425px) {
+@media screen and (max-width: 425px) {
   .range {
     width: 100% !important;
   }
@@ -28,7 +28,7 @@
 
 .markItem {
   position: absolute;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   top: 10px;
   font-size: 12px;
   white-space: nowrap;
@@ -50,5 +50,5 @@
   min-width: 32px;
   white-space: nowrap;
   font-size: 12px;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
 }
