--- a/src/features/AddressInput/AddressInput.module.scss
+++ b/src/features/AddressInput/AddressInput.module.scss
@@ -15,7 +15,7 @@
   flex-wrap: wrap;
 }
 .addressTitle {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 12px;
   font-weight: $fw-medium;
   color: $color-placeholder;
@@ -26,7 +26,7 @@
 .addressZip,
 .addressStreet,
 .addressRegion {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 14px;
   font-weight: $fw-semibold;
   padding: 0 25px 8px 8px;
