--- a/src/features/BlogSection/BlogSection.module.scss
+++ b/src/features/BlogSection/BlogSection.module.scss
@@ -30,7 +30,7 @@
   .subTitle {
     font-size: 44px;
     line-height: 53px;
-    font-family: $font-Lato;
+    font-family: $font-Century-Gothic;
     color: $color-black;
     font-weight: $fw-regular;
 
