--- a/src/features/ChangeHotelModal/ChangeHotelModal.module.scss
+++ b/src/features/ChangeHotelModal/ChangeHotelModal.module.scss
@@ -41,7 +41,7 @@
 }
 
 .select {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 14px;
   display: flex;
   gap: 32px;
