--- a/src/features/ContactForm/ContactForm.module.scss
+++ b/src/features/ContactForm/ContactForm.module.scss
@@ -67,7 +67,7 @@
 .sendBtn {
   margin-top: 16px;
   margin-bottom: 16px;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-style: normal;
   font-weight: $fw-semibold;
   font-size: 14px;
