--- a/src/features/DestinationHotels/DestinationHotels.module.scss
+++ b/src/features/DestinationHotels/DestinationHotels.module.scss
@@ -10,7 +10,7 @@
 }
 
 .title {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-weight: $fw-bold;
   font-size: 16px;
   line-height: 20px;
