--- a/src/features/DownloadBrochuresModal/DownloadBrochuresModal.module.scss
+++ b/src/features/DownloadBrochuresModal/DownloadBrochuresModal.module.scss
@@ -104,7 +104,7 @@
   }
 }
 .radioLabel {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 12px;
   font-weight: $fw-medium;
   color: $color-placeholder;
