--- a/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
+++ b/src/features/SendBrochuresModal/SendBrochuresModal.module.scss
@@ -19,7 +19,7 @@
 }
 
 .title {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 14px;
   font-weight: $fw-regular;
 }
@@ -132,7 +132,7 @@
   }
 }
 .radioLabel {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 12px;
   font-weight: $fw-medium;
   color: $color-placeholder;
@@ -165,7 +165,7 @@
 }
 
 .adressTitle {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 12px;
   font-weight: $fw-medium;
   color: $color-placeholder;
@@ -175,7 +175,7 @@
 .adressZip,
 .adressStreet,
 .addressRegion {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 14px;
   font-weight: $fw-semibold;
   padding: 0 8px 8px 8px;
