--- a/src/pages/BlogsPage/BlogsPage.module.scss
+++ b/src/pages/BlogsPage/BlogsPage.module.scss
@@ -57,7 +57,7 @@
   border-radius: 8px;
   border: none;
   padding: 0 24px;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 14px;
   font-weight: 300;
   color: #fff;
@@ -117,7 +117,7 @@
     flex-direction: column;
 
     & > h3 {
-      font-family: $font-Lato;
+      font-family: $font-Century-Gothic;
       color: $color-black;
     }
 
