--- a/src/pages/CareerPage/CareerPage.module.scss
+++ b/src/pages/CareerPage/CareerPage.module.scss
@@ -3,7 +3,7 @@
 
 .wrapper {
   padding: 80px 80px 160px 80px;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   background-image: url('/assets/images/aboutPage/background.png');
   background-repeat: no-repeat;
   @include mobile-tablet {
