--- a/src/pages/CareerPage/JobCard/JobCard.module.scss
+++ b/src/pages/CareerPage/JobCard/JobCard.module.scss
@@ -4,7 +4,7 @@
 .cardWrapper {
   width: 49%;
   margin-bottom: 32px;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   padding: 32px 40px;
   background-color: $color-white;
   border-radius: 16px;
