--- a/src/pages/FlightRequestPage/FlightRequestPage.module.scss
+++ b/src/pages/FlightRequestPage/FlightRequestPage.module.scss
@@ -2,7 +2,7 @@
 @import '/src/styles/theme/breakpoints.scss';
 
 .wrapper {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   padding-top: 16px;
 
   @media screen and (max-width: 850px) {
