--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -2,7 +2,7 @@
 
 .select {
   position: relative;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 14px;
   font-weight: $fw-semibold;
   line-height: 20px;
