--- a/src/features/DownloadBrochuresModal/Сard/Card.module.scss
+++ b/src/features/DownloadBrochuresModal/Сard/Card.module.scss
@@ -13,7 +13,7 @@
 .topic {
   width: 100%;
   padding-bottom: 6px;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 12px;
   font-weight: $fw-light;
 }
