--- a/src/pages/RequestsPage/RequestsPackage.module.scss
+++ b/src/pages/RequestsPage/RequestsPackage.module.scss
@@ -1,7 +1,7 @@
 @use 'styles/style.scss' as *;
 
 .wrapper {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   padding-top: 16px;
 }
 
