--- a/src/pages/TravelPlannerPage/CategoryCard/CategoryCard.module.scss
+++ b/src/pages/TravelPlannerPage/CategoryCard/CategoryCard.module.scss
@@ -47,7 +47,7 @@
   width: 100%;
   height: 100%;
   background-color: $color-bg-gallery-2;
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 22px;
   font-weight: $fw-semibold;
   line-height: 26px;
