--- a/src/pages/VoucherPage/Step2Form/Step2Form.module.scss
+++ b/src/pages/VoucherPage/Step2Form/Step2Form.module.scss
@@ -216,7 +216,7 @@
 }
 
 .submitBtn {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -225,7 +225,7 @@
   max-width: 331px;
 }
 
-.adressPhoneForm{
+.adressPhoneForm {
   display: flex;
   flex-direction: column;
   gap: 8px;
