--- a/src/styles/theme/mixins.scss
+++ b/src/styles/theme/mixins.scss
@@ -1,5 +1,5 @@
 @mixin placeholder {
-  font-family: $font-Lato;
+  font-family: $font-Century-Gothic;
   font-size: 12px;
   line-height: 14px;
   font-weight: $fw-regular;
