--- a/src/pages/HotelPage/NearbyDestinations/NearbyDestinations.module.scss
+++ b/src/pages/HotelPage/NearbyDestinations/NearbyDestinations.module.scss
@@ -36,18 +36,12 @@
 }
 
 .destinationItem {
-  height: 250px;
-  width: 30%;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
   background-position: bottom left;
   border-radius: 12px;
   display: flex;
   align-items: end;
   cursor: pointer;
   overflow: hidden;
-
-  @include mobile {
-    width: 100%;
-  }
 }
