--- a/src/features/TripCard/TripCard.module.scss
+++ b/src/features/TripCard/TripCard.module.scss
@@ -27,7 +27,9 @@
   height: 300px;
   background-color: $color-about-tabs;
   position: relative;
-
+  img {
+    object-fit: cover;
+  }
   @include mobile {
     height: 250px;
   }
