--- a/src/pages/TripPage/Tab/TripPlan/TripPlan.module.scss
+++ b/src/pages/TripPage/Tab/TripPlan/TripPlan.module.scss
@@ -85,7 +85,9 @@
   border-radius: 8px;
   overflow: hidden;
   background-color: $color-modal-header;
-
+  img {
+    object-fit: cover;
+  }
   @include mobile {
     width: 100%;
   }
