--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -1,20 +1,15 @@
 @use 'styles/style.scss' as *;
-
 .input {
   position: relative;
   width: 100%;
   height: 40px;
   border: 1px solid $color-laros-light-grey;
   border-radius: 8px;
+  padding-top: 8px;
+  background-color: $color-white;
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-  :focus {
-    border-radius: 8px;
-    height: 100%;
-    border: 2px solid $color-white-blue;
-  }
 }
 
 .shorten {
@@ -24,62 +19,44 @@
   justify-content: start;
   align-items: center;
   flex-wrap: wrap;
-
   & .field {
     padding: 0;
   }
-
   & .label {
     padding: 0 0 8px;
   }
-
   & .icon {
     bottom: 6px;
   }
 }
-
 .numberInput {
   height: 40px;
 }
-
 .label {
-  position: absolute;
   font-size: 16px;
   font-weight: $fw-medium;
   color: $color-checkbox-gray;
   white-space: nowrap;
-  padding: 0 8px 8px 24px;
-}
-
-.touched {
-  color: $color-white-blue;
-  font-size: 10px;
-  top: 0px;
-  transition: all 0.2s;
+  padding: 0 8px 8px 8px;
 }
 
 .field {
   width: 100%;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: $fw-semibold;
-  padding: 5px 0 4px 24px;
-  z-index: 1;
-  background-color: transparent;
-
+  padding: 0 0 4px 24px;
   &::placeholder {
     color: $color-checkbox-gray;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: $fw-regular;
     line-height: 17px;
   }
 }
-
 .icon {
   position: absolute;
   bottom: 8px;
   right: 9px;
 }
-
 .counter {
   position: absolute;
   right: 8px;
