--- a/src/features/ContactForm/ContactForm.module.scss
+++ b/src/features/ContactForm/ContactForm.module.scss
@@ -48,15 +48,15 @@
 .form {
   margin-top: 32px;
 
-  &>div {
-    margin-bottom: 8px;
+  & > div:not(.radio) {
+    margin-bottom: 13px;
   }
 }
 
 .radio {
   display: flex;
   align-items: center;
-  padding: 8px 8px 8px;
+  padding: 0 8px 13px 0;
 }
 
 .radioLabel {
@@ -77,7 +77,7 @@
 
 .input {
   border: 1px solid $color-laros-dark-grey;
-
+  height: 40px;
   .field::placeholder {
     font-weight: $fw-medium;
   }
