--- a/src/pages/RequestsPage/RequestsPackage.module.scss
+++ b/src/pages/RequestsPage/RequestsPackage.module.scss
@@ -36,6 +36,7 @@
   width: calc(100% / 2 - 18px);
   justify-content: start;
   margin-bottom: 68px;
+  gap: 10px;
 }
 
 .counterRow div:first-child {
@@ -48,7 +49,7 @@
   height: 48px;
 }
 
-.counterInput>div:first-child {
+.counterInput > div:first-child {
   padding: 0 0 0 16px;
 }
 
