--- a/src/pages/FlightRequestPage/FlightRequestPage.module.scss
+++ b/src/pages/FlightRequestPage/FlightRequestPage.module.scss
@@ -294,7 +294,7 @@
     background-color: $color-laros-light-grey;
     gap: 10px;
     border-radius: 20px;
-    width: 25%;
+    // width: 25%;
 
     span:nth-child(2) {
       order: 2;
@@ -309,7 +309,7 @@
       font-size: 16px;
       font-weight: $fw-medium;
       text-align: center;
-      max-width: 80%;
+      // max-width: 80%;
     }
   }
 }
@@ -317,9 +317,8 @@
 .counterRow {
   display: flex;
   flex-direction: row;
-  width: 49%;
+  width: 100%;
   justify-content: start;
-  margin-bottom: 68px;
   padding: 0;
   gap: 10px;
 
@@ -344,10 +343,11 @@
 .travelDurationCounter {
   position: relative;
   width: 49%;
+  margin-bottom: 68px;
 
   input {
     text-align: right;
-    padding-right: 100px;
+    padding-right: 110px;
   }
 
   .dayString {
