--- a/src/pages/HomePage/SelectedType/SliderItem/SliderItem.module.scss
+++ b/src/pages/HomePage/SelectedType/SliderItem/SliderItem.module.scss
@@ -74,7 +74,7 @@
   height: 100%;
   display: flex;
   text-align: center;
-  background-color: $color-bg-gallery-2;
+  // background-color: $color-bg-gallery-2;
 }
 
 .subtitle {
