--- a/src/pages/Team/Team.module.scss
+++ b/src/pages/Team/Team.module.scss
@@ -57,7 +57,6 @@
     justify-content: center;
   }
   @media (max-width: 560px) {
-    flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
   }
 }
