--- a/src/components/AreaCard/AreaCard.module.scss
+++ b/src/components/AreaCard/AreaCard.module.scss
@@ -17,6 +17,10 @@
   background-repeat: no-repeat;
   background-position: top left;
 
+  @include mobile {
+    width: 48%;
+  }
+
   //&:nth-child(3n) {
   //  width: 40%;
   //
