--- a/src/features/DestinationLayout/DestinationLayout.module.scss
+++ b/src/features/DestinationLayout/DestinationLayout.module.scss
@@ -14,20 +14,13 @@
   .sidebar {
     max-width: none !important;
   }
-
-  .content {
-    width: 100% !important;
-    padding-left: 0 !important;
-  }
 }
 
-@media screen and (max-width: 768px) {
-  .content {
-    width: 100% !important;
-    padding: 0 !important;
+.content {
+  @include mobile {
+    display: none !important;
   }
 }
-
 .sidebar {
   background-color: $color-light-grey;
   min-width: 240px;
