--- a/src/pages/TravelPlannerPage/TravelPlannerPage.module.scss
+++ b/src/pages/TravelPlannerPage/TravelPlannerPage.module.scss
@@ -94,14 +94,14 @@
 }
 
 .categoriesList {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  row-gap: 34px;
-  column-gap: 24px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
   padding-left: 0;
 
   @include mobile {
-    grid-template-columns: 1fr
+    grid-template-columns: 1fr;
   }
 }
 
