--- a/src/pages/TravelPlannerPage/CategoryCard/CategoryCard.module.scss
+++ b/src/pages/TravelPlannerPage/CategoryCard/CategoryCard.module.scss
@@ -3,7 +3,7 @@
 
 .card {
   height: 180px;
-  width: 100%;
+  width: 47%;
   border-radius: 16px;
   position: relative;
   display: flex;
@@ -27,6 +27,12 @@
   &:hover .title {
     display: none;
   }
+  @media (max-width: 390px) {
+    div {
+      font-size: 16px;
+    }
+    height: 140px;
+  }
 }
 
 .vertical {
@@ -41,6 +47,11 @@
   }
   @include mobile-tablet {
     height: 300px;
+  }
+  @media (max-width: 390px) {
+    div {
+      font-size: 22px;
+    }
   }
 }
 .content {
