--- a/src/pages/TripOffersPage/TripOffersPage.module.scss
+++ b/src/pages/TripOffersPage/TripOffersPage.module.scss
@@ -59,6 +59,9 @@
   position: relative;
   width: 80%;
   margin: auto;
+  @include mobile {
+    font-size: 30px;
+  }
 }
 
 .subTitle {
@@ -111,12 +114,16 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
+  justify-content: center;
+  width: 100%;
+  gap: 25px;
   margin: 80px auto 80px;
 
   @include mobile-tablet {
     margin: 0 auto;
     padding: 80px 0;
+  }
+  @include mobile {
   }
 }
 
